added testuser profile